# LearnLLVMEssential

./: .gitignore  opt.help
Chapter-02/: run.sh
Chapter-03/: toy.cpp
Chapter-04/: CMakeLists.txt  run.sh  test.ll
Chapter-04/PassesDir/: CMakeLists.txt  FnNamePrint.cpp
Chapter-05/: intrinsic.cpp  intrinsic.ll  licm.ll  run.sh  scalevl.ll
Chaptor-02/: toy.cpp
